--- a/BasicCppThreads/CMakeLists.txt
+++ b/BasicCppThreads/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
-project(Test)
+project(BasicCppThreads)
 
 set(CMAKE_CXX_STANDARD 17)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
-add_executable(Test main.cpp)
+add_executable(BasicCppThreads main.cpp)
