Delete timer macros, wrap timing to RAII

--- a/BasicCppThreads/CMakeLists.txt
+++ b/BasicCppThreads/CMakeLists.txt
@@ -4,4 +4,4 @@ project(BasicCppThreads)
 set(CMAKE_CXX_STANDARD 17)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
-add_executable(BasicCppThreads main.cpp)
+add_executable(BasicCppThreads main.cpp Timer.cpp)
