Add queue wrapper and output stream operators overload

--- a/ProducerConsumerThreads/src/CMakeLists.txt
+++ b/ProducerConsumerThreads/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
 file(GLOB_RECURSE SRC_FILES dataflow/*)
+message(STATUS "${SRC_FILES}=${${SRC_FILES}}")
 
 add_library(src ${SRC_FILES})
