--- a/ProducerConsumerThreads/CMakeLists.txt
+++ b/ProducerConsumerThreads/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(ENTRY_POINT main.cpp)
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -g -rdynamic")
 endif()
 
 include_directories(include)
