#4 Add counting sorted elements by consuments; add timer

--- a/BasicCppThreads/CMakeLists.txt
+++ b/BasicCppThreads/CMakeLists.txt
@@ -1,3 +1,8 @@
 project(BasicCppThreads)
 
 add_executable(BasicCppThreads main.cpp)
+
+set_target_properties(BasicCppThreads
+    PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin"
+)
