--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,10 @@ project(ScientificComputing)
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(SPDLOG_DIR external/spdlog)
-set(TIMER_DIR external/Timer)
+set(SPDLOG_DIR ${PROJECT_SOURCE_DIR}/external/spdlog)
+set(TIMER_DIR ${PROJECT_SOURCE_DIR}/external/Timer)
 set(OPERATORS_DIR ${PROJECT_SOURCE_DIR}/external/Generic-Ostream-Operators)
+set(GSL_DIR ${PROJECT_SOURCE_DIR}/external/GSL)
 
 set(TOOLCHAIN_BUILD "${CMAKE_CXX_COMPILER_ID}${CMAKE_BUILD_TYPE}")
 
@@ -46,9 +47,11 @@ include_directories(SYSTEM
     ${SPDLOG_DIR}/include
     ${TIMER_DIR}
     ${OPERATORS_DIR}
+    ${GSL_DIR}/include
 )
 
 add_subdirectory(${SPDLOG_DIR} ${CMAKE_CURRENT_BINARY_DIR}/${SPDLOG_DIR})
+add_subdirectory(${GSL_DIR} ${CMAKE_CURRENT_BINARY_DIR}/${GSL_DIR})
 
 add_subdirectory(BasicCppThreads)
 add_subdirectory(ProducerConsumerThreads)
