Add nonblocking demo and blocking prime counter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ add_compile_options(
     -Wnon-virtual-dtor # Warn if class with virtual func has no virtual dtor
     -Wcast-align # Warn for potential performance problem casts
     -Wunused # Warn on anything being unused
-    -Woverloaded-virtual # Warn if overload a virtual function
+    -Wno-overloaded-virtual # Don't warn if overload a virtual function
     -Wpedantic # Warn if non-standard C++ is used
     -Wconversion # Warn on type conversions that may lose data
     -Wsign-conversion # Warn on sign conversions
