--- a/ProducerConsumer/CMakeLists.txt
+++ b/ProducerConsumer/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(INTERFACES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/interfaces/)
+set(INTERFACES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/interfaces)
 
 add_subdirectory(Threads)
 add_subdirectory(Mpi)
