--- a/ProducerConsumer/Mpi/CMakeLists.txt
+++ b/ProducerConsumer/Mpi/CMakeLists.txt
@@ -3,6 +3,11 @@ project(ProducerConsumerMpi)
 file(GLOB_RECURSE SRC CONFIGURE_DEPENDS "*.cpp")
 add_executable(ProducerConsumerMpi ${SRC})
 
+target_compile_definitions(ProducerConsumerMpi PRIVATE
+    BUILD_INFO="${CMAKE_SYSTEM_NAME} ${TOOLCHAIN_BUILD}"
+    PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR}"
+)
+
 set_target_properties(ProducerConsumerMpi
     PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/${TOOLCHAIN_BUILD}"
