Update travis script with more recent toolchain

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ matrix:
     - os: linux
       addons:
         apt:
-          packages: lcov
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['cmake', lcov]
         sonarcloud:
           organization: "szymonzos"
           token:
