--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,12 @@ matrix:
     - os: linux
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['cmake', lcov]
+          sources: 
+            - 'ubuntu-toolchain-r-test'
+          packages: 
+            - cmake-3.17
+            - gcc-10
+            - g++-10
         sonarcloud:
           organization: "szymonzos"
           token:
@@ -21,6 +25,8 @@ before_script:
   - cmake -DENABLE_COVERAGE=${ENABLE_COVERAGE} ..
 
 script:
+  - export CC=gcc-10
+  - export CXX=g++-10
   - make clean
   # The wrapper is required by Sonar Cloud
   - ${SONAR_BUILD_WRAPPER} make -j2
