--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_script:
   - pip install --upgrade cmake
   - mkdir build
   - cd build
-  - cmake -DENABLE_COVERAGE=${ENABLE_COVERAGE} ..
+  - cmake -DENABLE_COVERAGE=${ENABLE_COVERAGE}-DCMAKE_CXX_COMPILER=mpicxx -DCMAKE_C_COMPILER=mpicc ..
 
 script:
   - make clean
