--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,7 @@ before_script:
   - test -n $CC  && unset CC
   - test -n $CXX && unset CXX
   - pip install --upgrade cmake
-  - ls -a /usr/include/mpi
-  - ls -a /usr/include/mpich
+  - export PATH=$PATH:/usr/include/mpich
   - mkdir build
   - cd build
   - cmake -DENABLE_COVERAGE=${ENABLE_COVERAGE}-DCMAKE_CXX_COMPILER=mpicxx -DCMAKE_C_COMPILER=mpicc ..
