--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_script:
   - test -n $CXX && unset CXX
   - pip install --upgrade cmake
   - export PATH=$PATH:/usr/include/mpich
-  - find / -name "mpi.h"
+  - sudo find / -name "mpi.h"
   - echo $PATH
   - mkdir build
   - cd build
