--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,8 @@ before_script:
   - test -n $CC  && unset CC
   - test -n $CXX && unset CXX
   - pip install --upgrade cmake
-  - export PATH=$PATH:/usr/include/mpich
-  - sudo find / -name "mpi.h"
-  - echo $PATH
+  - export CPATH=$CPATH:/usr/include/mpich
+  - echo $CPATH
   - mkdir build
   - cd build
   - cmake -DENABLE_COVERAGE=${ENABLE_COVERAGE}-DCMAKE_CXX_COMPILER=mpicxx -DCMAKE_C_COMPILER=mpicc ..
