--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,12 @@ language: cpp
 
 matrix:
   include:
-    - os: linux
+    - os: osx
+      osx_image: xcode12
       addons:
         apt:
-          sources:
-            - sourceline: 'ppa:ubuntu-toolchain-r/test'
-            - 'ubuntu-toolchain-r-test'
           packages: 
-            - gcc-snapshot 
-            - gcc-9
-            - g++-9
             - mpich
-            - libmpich-dev
         sonarcloud:
           organization: "szymonzos"
           token:
@@ -23,8 +17,6 @@ matrix:
         - SONAR_BUILD_WRAPPER="build-wrapper-linux-x86-64 --out-dir bw-output"
 
 before_script:
-  - export CC=gcc-9
-  - export CXX=g++-9
   - pip install --upgrade cmake
   - export CPATH=$CPATH:/usr/include/mpich
   - echo $CPATH
